La page profile affiche le joueur dont le pseudo est passé en paramètre. Un bouton refresh permet de raffraichir la liste d'amis si elle n'est pas vide. Nouveaux commentaires dans le js

--- a/transcendence/home/templates/navbar.html
+++ b/transcendence/home/templates/navbar.html
@@ -57,7 +57,7 @@
                     </button>
                 </li>
                 <li class="loggedInButton d-none">
-                    <button class="linkToWindow dropdown-item d-flex align-items-center">
+                    <button id="linkToMyProfile" class="dropdown-item d-flex align-items-center">
               <img src="{% static 'home/images/person-circle.svg' %}" alt="">
                         <div class="ms-2">Profile</div>
                     </button>
