--- a/transcendence/home/templates/profile.html
+++ b/transcendence/home/templates/profile.html
@@ -9,7 +9,10 @@
                         </div>
                         <div class="mw-100 flex-grow-1 d-flex flex-column p-2">
                             <p id="stats" class="d-flex justify-content-around text-uppercase fs-5 fw-bold"><span class="text-success">wins - <span id="totalWins"></span></span> <span class="text-primary">Matches played - <span id="totalMatches"></span></span><span class="text-danger">loses - <span id="totalLoses"></span></span></p>
-                            <p id="friendListTitle" class="fs-4 text-decoration-underline fw-bold text-danger-emphasis">Friend List</p>
+                            <p id="friendListTitle" class="fs-4 text-decoration-underline fw-bold text-danger-emphasis">
+                                Friend List
+                                <button id="refreshFriendList" type="button" class="btn d-none"><img src="{% static 'home/images/arrow-clockwise.svg' %}" alt="" class="mb-1 p-1 border border-black rounded"></button>
+                            </p>
                             <div id="profile-body" class="d-flex mt-1 flex-grow-1">
                                 <div id="friendList" class="w-25 d-flex rounded" style="min-height:300px;"></div>
                                 <div id="profile-info" class="d-flex flex-column gap-1" style="max-width: 800px;">
