Changement dans la liste d'amis, selon que l'ami est connecté ou qu'on consulte la liste de quelqu'un d'autre que soi-même. Les boutons pour modifier la catchphrase et la bio ne s'affichent que pour le profil connecté et modifient l'affichage correctement. L'annulation des modifications fonctionne correctement aussi

--- a/transcendence/home/templates/settings.html
+++ b/transcendence/home/templates/settings.html
@@ -5,15 +5,15 @@
                         <div class="w-50 p-2 border border-3 border-black rounded bg-secondary d-flex flex-column justify-content-center align-items-center overflow-auto text-dark">
                             <h2 class="text-center pt-2 fs-3 fw-bold">Settings</h2>
                             <label for="whatGame" class="form-label ps-2 pt-3">What game do you wish to play today ?</label>
-                            <select name="whatGame" id="" class="form-select w-50">
+                            <select name="whatGame" id="whatGame" class="form-select w-50">
                                 <option value="1" selected>Pong</option>
                                 <option value="2">Surprise !</option>
                             </select>
                             <span class="form-text">
                                 This will affect the display on your profile page
                             </span>
-                            <label for="whatGame" class="form-label ps-2 pt-3">What device will you use ?</label>
-                            <select name="whatGame" id="" class="form-select w-50">
+                            <label for="whatDevice" class="form-label ps-2 pt-3">What device will you use ?</label>
+                            <select name="whatDevice" id="whatDevice" class="form-select w-50">
                                 <option value="1" selected>Keyboard</option>
                                 <option value="2">Mouse</option>
                                 <option value="2">Touch-screen</option>
