--- a/transcendence/home/templates/chat.html
+++ b/transcendence/home/templates/chat.html
@@ -15,7 +15,7 @@
                             <span class="pt-1 pe-2 m-0 border-0" id="basic-addon1">
                               <img src="{% static 'home/images/wechat.svg' %}" alt="">
                             </span>
-                            <input for="chat-content" type="text" class="form-control border-0" placeholder="Say something nice..." aria-label="Username" aria-describedby="basic-addon1">
+                            <input type="text" name="chatPrompt" id="chatPrompt" class="form-control border-0" placeholder="Say something nice..." aria-label="Username" aria-describedby="basic-addon1">
                           </div>                              
                     </div>
                 </div>
