--- a/transcendence/home/templates/profile.html
+++ b/transcendence/home/templates/profile.html
@@ -15,18 +15,27 @@
                             </p>
                             <div id="profile-body" class="d-flex mt-1 flex-grow-1">
                                 <div id="friendList" style="min-height:300px;"></div>
-                                <div id="profile-info" class="d-flex flex-column gap-1" style="max-width: 800px;">
-                                    <div class="ps-3 d-flex flex-wrap">
+                                <div id="profile-info" class="d-flex flex-column gap-3" style="max-width: 800px;">
+                                    <div id="CPDiv" class="ps-3 d-flex flex-wrap">
                                         <span class="me-3 mt-1 text-decoration-underline fs-4 fw-bold text-danger-emphasis">Catchphrase</span>
-                                        <button type="button" class="btn btn-secondary">Modify</button>
+                                        <button id="modifyCPButton" type="button" class="modifyProfileButton btn btn-secondary d-none">Modify</button>
                                         <span id="catchphrase" class="w-100 m-0 fs-4"></span>
+                                        <form class="d-flex flex-column d-none">
+                                            <div class="form-text">Max 80 characters</div>
+                                            <input type="text" name="modifyCPForm" size="40" maxlength="80" value=""></textarea>
+                                            <span><button type="submit" class="btn btn-success my-1">Save chages</button></span>
+                                            <span><button type="button" id="modifyCPCancel" class="btn btn-danger">Cancel changes</button></span>
+                                        </form>
                                     </div>
-                                    <div class="d-flex flex-column p-3 flex-grow-1">
-										<div class="d-flex">
-                                        	<div class="me-3 mt-1 text-decoration-underline fs-4 fw-bold text-danger-emphasis">Bio</div>
-                                        	<span><button type="button" class="btn btn-secondary">Modify</button></span>
-										</div>
-                                        <div id="bio" class="w-100 h-100 mt-1 flex-grow-1 fs-5 overflow-auto" style="max-height:200px"></div>
+                                    <div id="bioDiv" class="d-flex flex-wrap ps-3">
+                                        <span class="me-3 mt-1 text-decoration-underline fs-4 fw-bold text-danger-emphasis">Bio</span>
+                                        <button id="modifyBioButton" type="button" class="modifyProfileButton btn btn-secondary d-none">Modify</button>
+                                        <span id="bio" class="mt-1 flex-grow-1 fs-5 overflow-auto" style="max-height:200px"></span>
+                                        <form class="d-flex flex-column d-none">
+                                            <textarea name="modifyBioForm" cols="50" rows="5">Texte d'exemple</textarea>
+                                            <span><button type="submit" class="btn btn-success my-1">Save chages</button></span>
+                                            <span><button type="button" id="modifyBioCancel" class="btn btn-danger">Cancel changes</button></span>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
