Modification de l'avatar sur le profil du joueur connecté (visuel uniquement, bouton à intégrer). Prompt du chat déactivé si déconnecté

--- a/transcendence/home/templates/chat.html
+++ b/transcendence/home/templates/chat.html
@@ -15,7 +15,7 @@
                             <span class="pt-1 pe-2 m-0 border-0" id="basic-addon1">
                               <img src="{% static 'home/images/wechat.svg' %}" alt="">
                             </span>
-                            <input type="text" name="chatPrompt" id="chatPrompt" class="form-control border-0" placeholder="Say something nice..." aria-label="Username" aria-describedby="basic-addon1">
+                            <input type="text" name="chatPrompt" id="chatPrompt" class="form-control border-0" placeholder="Say something nice..." aria-label="Username" aria-describedby="basic-addon1" disabled>
                           </div>                              
                     </div>
                 </div>
