--- a/transcendence/home/templates/profile_home.html
+++ b/transcendence/home/templates/profile_home.html
@@ -19,13 +19,34 @@
                             <a href="#" class="loginLink linkToWindow">or create a new account</a>.
                         </p>
                         <p class="text-center">
-                            Once you're in, visit the 'Settings' page and adjust things to your liking.
+                            Once you're in, take all your sweet time to complete your profile.
                         </p>
                         <p class="text-center">
-                            Take all your sweet time to complete your profile.
+                            That's also where you will find a list of the people you added as friends.
                         </p>
                         <p class="text-center">
-                            You can add any other player to your friendlist, either by clicking on his name in the chat or by hitting the "Add to friendlist" button after a match against him.
+                            Then, take a look at the 'Settings' page and adjust things to your liking.
+                        </p>
+                        <p class="text-center">
+                            The game you choose to play today affects everything game-related everywhere on the website.
+                        </p>
+                        <p class="text-center">
+                            That includes the background, the profiles display, the leaderboard and - obviously - the game you will play or challenge people to.
+                        </p>
+                        <p class="text-center">
+                            If your screen is large enough to display it, you will find a chat on the left. You need to be connected to use it.
+                        </p>
+                        <p class="text-center">
+                            You may use it to speak with everyone who's connected to the website via the default 'General' channel. 
+                        </p>
+                        <p class="text-center">
+                            A unique channel is created for each game, for the exclusive use of contenders and potential viewers (if you allowed them in the settings).
+                        </p>
+                        <p class="text-center">
+                            You may also click on any nickname (except yours) to display a small menu filled with self-explanatory options
+                        </p>
+                        <p class="text-center">
+                            At any time, you can display this manual by clicking on the 'home' button, top right of the screen.
                         </p>
                     </div>
 {% endblock %}
