Correction texte sous le menu déroulant de choix de jeu dans les options

--- a/transcendence/home/templates/settings.html
+++ b/transcendence/home/templates/settings.html
@@ -10,7 +10,7 @@
                                 <option value="2">Surprise !</option>
                             </select>
                             <span class="form-text">
-                                This will affect the display on your profile page
+                                This will affect the display on some parts of the website
                             </span>
                             <label for="whatDevice" class="form-label ps-2 pt-3">What device will you use ?</label>
                             <select name="whatDevice" id="whatDevice" class="form-select w-50">
