--- a/transcendence/home/templates/profile_home.html
+++ b/transcendence/home/templates/profile_home.html
@@ -13,7 +13,7 @@
                             You may also use your 42 login if you have one
                         </p>
                         <div class="text-center">
-                <a href="#" class="loginLink" title="Click to get to the 42 login page"><img src="{% static 'home/images/42_logo.png' %}" alt="" class="px-3 border border-black"></a>
+                            <a href="#" class="loginLink" title="Click to get to the 42 login page"><img src="{% static 'home/images/42_logo.png' %}" alt="" class="px-3 border border-black"></a>
                         </div>
                         <p class="px-5 mt-2 text-center">
                             <a href="#" class="loginLink linkToWindow">or create a new account</a>.
@@ -44,6 +44,12 @@
                         </p>
                         <p class="text-center">
                             You may also click on any nickname (except yours) to display a small menu filled with self-explanatory options
+                        </p>
+                        <p class="text-center">
+                            On the 'leaderboard' page, you will find the top [up to] 50 players, ranked by the ELO system, for the game you chose to play today.
+                        </p>
+                        <p class="text-center">
+                            Finally, the 'About' page will give you informations about this project.
                         </p>
                         <p class="text-center">
                             At any time, you can display this manual by clicking on the 'home' button, top right of the screen.
