--- a/transcendence/home/templates/subscribe.html
+++ b/transcendence/home/templates/subscribe.html
@@ -5,12 +5,14 @@
                         <div class="mw-50 p-2 border border-3 border-black rounded bg-secondary d-flex flex-column justify-content-center align-items-center overflow-auto">
                             <p class="fs-4 fw-bold px-3 text-center">Welcome to ft_transcendence !</p>
                             <div class="mb-2">
-                                <label for="subAddress" class="form-label">Username</label>
+                                <label for="subAddress" class="form-label">Username:</label>
                                 <input type="text" class="form-control" id="subAddress">
                             </div>
                             <div class="mb-4">
-                                <label for="subPassword" class="form-label">Password</label>
+                                <label for="subPassword" class="form-label">Password:</label>
                                 <input type="password" class="form-control" id="subPassword">
+                                <label for="subPasswordConfirm" class="form-label">Password confirmation:</label>
+                                <input type="password" class="form-control" id="subPasswordConfirm">
                             </div>
                             <button type="button" class="btn btn-info">Create account</button>
                         </div>
