--- a/transcendence/home/templates/leaderboard.html
+++ b/transcendence/home/templates/leaderboard.html
@@ -16,7 +16,7 @@
                                 <span class="d-flex justify-content-center ld-md ">Level</span>
                             </li>
                         </ul>
-                        <div id="leaderListContainer" style="max-height: 70%;">
+                        <div id="leaderListContainer" class="overflow-auto noScrollBar" style="max-height: 70%;">
                             <ul id="leaderList" class="list-group">
                             </ul>
                         </div>
