--- a/transcendence/home/templates/new_game_local.html
+++ b/transcendence/home/templates/new_game_local.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% block chat %}
-                    <div id="new_game" class="customWindow d-flex d-none">
+                    <div id="new_game_local" class="customWindow d-flex d-none">
                         <div id="local" class="w-100 d-flex flex-column flex-grow-1 d-none">
                             <div class="d-flex justify-content-center mb-3 gap-2">
                                 <!-- <button id="switch" type="button" class="btn btn-success">Switch sides</button> -->
@@ -93,9 +93,6 @@
                                 </div>
                             </div>
                             <p class="text-center mt-3"><button id="startButton" type="button" class="btn btn-warning disabled">Let's play !!!</button></p>
-                        </div>
-                        <div id="remote">
-
                         </div>
                     </div>
 {% endblock %}
