--- a/transcendence/home/templates/single_page.html
+++ b/transcendence/home/templates/single_page.html
@@ -23,7 +23,8 @@
                   {% include 'leaderboard.html' %}
                   {% include 'about.html' %}
                   {% include 'settings.html' %}
-                  {% include 'new_game.html' %}
+                  {% include 'new_game_online.html' %}
+                  {% include 'new_game_local.html' %}
                   {% include 'login.html' %}
                   {% include 'subscribe.html' %}
               </div>
