--- a/transcendence/home/templates/new_game_online.html
+++ b/transcendence/home/templates/new_game_online.html
@@ -4,6 +4,7 @@
                     <div id="new_game_online" class="customWindow d-none">
                         <p class="fs-2 fw-bold text-center">So you wanna play <span id="chosenGame"></span> ?</p>
                         <hr class="mx-5">
+                        <span class="ms-2">Tip : Click on an avatar to see the player's profile</span>
                         <p class="fs-4 text-decoration-underline fw-bold text-danger-emphasis ms-2">
                             Your challengers
                             <button id="refreshChallengersList" type="button" class="btn"><img src="{% static 'home/images/arrow-clockwise.svg' %}" alt="" class="mb-1 p-1 border border-black rounded"></button>
