Modification de la page leaderboard : construction à partir des id des joueurs + accès aux profils via les avatars dans la liste

--- a/transcendence/home/templates/leaderboard.html
+++ b/transcendence/home/templates/leaderboard.html
@@ -5,6 +5,7 @@
                         <p class="d-flex mb-0 justify-content-center text-danger-emphasis text-decoration-underline fw-bold fs-1" style="min-height: 10%;">
                             Leaderboard
                         </p>
+                        <span class="ms-2">Tip : Click on an avatar to see the player's profile</span>
                         <ul class="list-group mt-2">
                             <li id="leaderhead" class="list-group-item w-100 d-flex p-1 pt-2">
                                 <span class="ld-sm d-flex justify-content-center"><i>#</i></span>
