--- a/transcendence/home/templates/new_game_local.html
+++ b/transcendence/home/templates/new_game_local.html
@@ -18,13 +18,9 @@
                             </div>
                         </div>
                         <div class="d-flex flex-grow-1 align-items-center justify-content-between my-2">
-                            <div id="playerOne" class="border border-black border-3 rounded h-100 w-50">
-                                
-                            </div>
+                            <div id="playerOne" class="border border-black border-3 rounded h-100 w-50"></div>
                             <img src="{% static 'home/images/versus.png' %}" class="mx-2" alt="" style="height: 150px;width: 100px;">
-                            <div id="playerTwo" class="border border-black border-3 rounded h-100 w-50">
-
-                            </div>
+                            <div id="playerTwo" class="border border-black border-3 rounded h-100 w-50"></div>
                         </div>
                         <div class="text-center">
                             <button type="button" class="btn btn-warning" disabled>Let's rock !</button>
