--- a/transcendence/home/templates/navbar.html
+++ b/transcendence/home/templates/navbar.html
@@ -2,7 +2,7 @@
 
 {% block navbar %}
         <div id="header" class="w-100 d-flex bg-warning ps-2" style="height: 50px;">
-            <button type="button" class="nav-link p-0 pe-1 d-flex pt-2" data-bs-toggle="dropdown">
+            <button type="button" class="nav-link" data-bs-toggle="dropdown">
           <img id="burger-menu" src="{% static 'home/images/list.svg' %}" alt="" class="d-none pb-1">
           <img id="avatar-small" src="{% static 'home/images/base_profile_picture.png' %}" alt="" class="avatar rounded-circle" style="width: 35px;height: 35px;">
             </button>
