--- a/frontend/src/niespana/Main.css
+++ b/frontend/src/niespana/Main.css
@@ -31,7 +31,7 @@
 }
 
 .Body{
-  background-image: url('../images/bg.jpg');
+  background-image: url('..images/bg.jpg');
   background-size:cover;
   background-repeat: no-repeat;
   background-position:top;
